--- a/formular.html
+++ b/formular.html
@@ -70,31 +70,38 @@
       ></iframe
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
-        <!--PRO MOBIL-->
-        <div id="mojeSidenav" class="mojesidenav">
-          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
-            >&times;</a
-          >
-          <a href="index">Úvod</a>
-          <a href="kalkulacky">Vzorce a kalkulačky</a>
-          <a href="onasitride">O naší třídě</a>
-        </div>
-
-    <div class="header">
-      <div class="logo">
-        <a href="index">
-          <img src="logo-03.png" alt="Logo naší třídy" height="30px" />
-        </a>
-      </div>
-    </div>
-
-    <div id="navbar">
-      <a class="active" href="index">Úvod</a>
-      <a href="kalkulacky">Vzorce a Kalkulačky</a>
+    <!--PRO MOBIL-->
+    <div id="mojeSidenav" class="mojesidenav">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+        >&times;</a
+      >
+      <a href="index">Úvod</a>
+      <a href="kalkulacky">Vzorce a kalkulačky</a>
       <a href="onasitride">O naší třídě</a>
     </div>
 
-    <div class="content">
+    <!--PRO PC-->
+    <div class="desktop_nav hide-on-med-and-down">
+      <div class="header">
+        <div class="logo">
+          <a href="index">
+            <img src="logo-03.png" alt="Logo naší třídy" height="30px" />
+          </a>
+        </div>
+      </div>
+      <div id="navbar">
+        <a class="active" href="index">Úvod</a>
+        <a href="kalkulacky">Vzorce a Kalkulačky</a>
+        <a href="onasitride">O naší třídě</a>
+      </div>
+    </div>
+
+    <div class="content container">
+      <span
+        onClick="openNav()"
+        class="openbtn show-on-med-and-down hide-on-large-only"
+        >☰</span
+      >
       <div class="post_tags">
         <div class="post_tag"><a href=""></a></div>
         <div class="post_tag"><a href=""></a></div>
@@ -102,11 +109,23 @@
         <div class="post_tag"><a href=""></a></div>
         <div class="post_tag"><a href=""></a></div>
       </div>
-      <!-- Posty -->
-      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdouCxhpUwSkQkRUL4Jod9D2D7p9MKJj_7DwPcI7TWeZddNTw/viewform?embedded=true" width="640" height="407" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-<br>
+    </div>
+    <!-- Posty -->
+    <iframe
+      src="https://docs.google.com/forms/d/e/1FAIpQLSdouCxhpUwSkQkRUL4Jod9D2D7p9MKJj_7DwPcI7TWeZddNTw/viewform?embedded=true"
+      width="640"
+      height="407"
+      frameborder="0"
+      marginheight="0"
+      marginwidth="0"
+      >Loading…</iframe
+    >
+    <br />
 
-      <b>Tohle prosím neřešte jsem línej to jít teď fixovat, stejnak je tahle mini stránka jen na chvíli</b>
+    <b
+      >Tohle prosím neřešte jsem línej to jít teď fixovat, stejnak je tahle mini
+      stránka jen na chvíli</b
+    >
     <!-- Site footer -->
     <footer class="page-footer grey darken-3">
       <div class="container">
