--- a/kalkulacky.html
+++ b/kalkulacky.html
@@ -69,22 +69,28 @@
       <a href="kalkulacky">Vzorce a kalkulačky</a>
       <a href="onasitride">O naší třídě</a>
     </div>
-
-    <div class="header">
-      <div class="header_logo">
-        <a href="index">
-          <img src="logo-03.png" alt="Logo naší třídy" height="30px" />
-        </a>
+    <!--PRO PC-->
+    <div class="desktop_nav hide-on-med-and-down">
+      <div class="header">
+        <div class="logo">
+          <a href="index">
+            <img src="logo-03.png" alt="Logo naší třídy" height="30px" />
+          </a>
+        </div>
+      </div>
+      <div id="navbar">
+        <a class="active" href="index">Úvod</a>
+        <a href="kalkulacky">Vzorce a Kalkulačky</a>
+        <a href="onasitride">O naší třídě</a>
       </div>
     </div>
 
-    <div id="navbar">
-      <a class="active" href="index">Úvod</a>
-      <a href="kalkulacky">Kalkulačky</a>
-      <a href="onasitride">O naší třídě</a>
-    </div>
-
     <div class="content container">
+      <span
+        onClick="openNav()"
+        class="openbtn show-on-med-and-down hide-on-large-only"
+        >☰</span
+      >
       <div class="vyber">
         <h1>Vyberte si z jakého předmětu chcete kalkulačku</h1>
         <div class="vyber_tlacitko"><a href="#fyzika">Fyzika</a></div>
@@ -280,11 +286,25 @@
 
             <ul>
               <li><a href="#obs_val">Obsah válce</a></li>
+              <li><a href="#obs_kru">Obsah kruhu</a></li>
             </ul>
           </div>
           <div class="calcs">
             <div class="calc" id="obs_val">
               <div class="calcs_subtitle">Obsah válce</div>
+              <div class="row">
+                <div class="col s12 m12">
+                  <div class="card red darken-1">
+                    <div class="card-content white-text">
+                      <span class="card-title">Varování</span>
+                      <p>
+                        Aby jste si vypočítali obsah celýho válce tak si musíte
+                        obsah pláště a obsah podstavy sečíst dohromady
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
               <div class="calc_title">Obsah pláště</div>
               <br />
               <div class="calc_content">
@@ -397,7 +417,7 @@
     </div>
     <!--Footer-->
 
-    <footer class="page-footer grey darken-3">
+    <footer class="page-footer grey darken-3 flow-text">
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
