--- a/podminky.html
+++ b/podminky.html
@@ -68,21 +68,34 @@
           <a href="kalkulacky">Vzorce a kalkulačky</a>
           <a href="onasitride">O naší třídě</a>
         </div>
-    <div class="header">
-      <div class="header_logo">
-        <a href="index">
-          <img src="logo-03.png" alt="Logo naší třídy" height="30px" />
-        </a>
-      </div>
-    </div>
+        <!--PRO PC-->
+        <div class="desktop_nav hide-on-med-and-down">
+          <div class="header">
+            <div class="logo">
+              <a href="index">
+                <img src="logo-03.png" alt="Logo naší třídy" height="30px" />
+              </a>
+            </div>
+          </div>
+          <div id="navbar">
+            <a class="active" href="index">Úvod</a>
+            <a href="kalkulacky">Vzorce a Kalkulačky</a>
+            <a href="onasitride">O naší třídě</a>
+          </div>
+        </div>
 
-    <div id="navbar">
+    <div id="navbar hide-on-med-and-down">
       <a class="active" href="index">Úvod</a>
       <a href="kalkulacky">Kalkulačky</a>
-      <a href="javascript:void(0)">Contact</a>
+      <a href="onasitride">O naší třídě</a>
     </div>
     <!--CONTENT-->
-    <div class="content">
+    <div class="content container">
+      <span
+      onClick="openNav()"
+      class="openbtn show-on-med-and-down hide-on-large-only"
+      >☰</span
+    >
       <div class="podminky">
         <h1>Podmínky používání</h1>
         <p>
