--- a/passwords/HailSatanWaitWut.html
+++ b/passwords/HailSatanWaitWut.html
@@ -16,7 +16,7 @@
         })(window, document, 'script', 'dataLayer', 'GTM-MM79V2N');
     </script>
     <!-- End Google Tag Manager -->
-    <meta http-equiv="refresh" content="2; url =/people/people " />
+    <meta http-equiv="refresh" content="2; url =https://gvhkvarta.cf/people/people " />
     <link rel="stylesheet" href="/style.css" />
     <link rel="icon" type="image/png" href="" />
     <meta charset="utf-8" />
