--- a/passwords/Napoleon.html
+++ b/passwords/Napoleon.html
@@ -57,23 +57,23 @@
     <!--PRO MOBIL-->
     <div id="mojeSidenav" class="mojesidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="index">Úvod</a>
-        <a href="kalkulacky">Vzorce a kalkulačky</a>
-        <a href="onasitride">O naší třídě</a>
+        <a href="/index">Úvod</a>
+        <a href="/kalkulacky">Vzorce a kalkulačky</a>
+        <a href="/onasitride">O naší třídě</a>
     </div>
     <!--PRO PC-->
     <div class="desktop_nav hide-on-med-and-down">
         <div class="header">
             <div class="logo">
                 <a href="index">
-                    <img src="logo-03.png" alt="Logo naší třídy" height="30px" />
+                    <img src="/logo-03.png" alt="Logo naší třídy" height="30px" />
                 </a>
             </div>
         </div>
         <div id="navbar">
-            <a class="active" href="index">Úvod</a>
-            <a href="kalkulacky">Vzorce a Kalkulačky</a>
-            <a href="onasitride">O naší třídě</a>
+            <a class="active" href="/index">Úvod</a>
+            <a href="/kalkulacky">Vzorce a Kalkulačky</a>
+            <a href="/onasitride">O naší třídě</a>
         </div>
     </div>
 
