--- a/people/maja-sediva.html
+++ b/people/maja-sediva.html
@@ -19,9 +19,8 @@
   <link rel="stylesheet" href="/style.css" />
   <link rel="icon" type="image/png" href="" />
   <meta charset="utf-8" />
-  <title>Úvod|gvhkvarta.cf</title>
+  <title>Maja Šedivá|gvhkvarta.cf</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <script src="https://kit.fontawesome.com/29ece32e74.js" crossorigin="anonymous"></script>
   <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet" />
   <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
@@ -47,7 +46,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
 
-<body>
+<body style="background: #9575cd;">
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MM79V2N" height="0" width="0"
       style="display: none; visibility: hidden;"></iframe></noscript>
@@ -77,19 +76,18 @@
   </div>
 
   <div class="content container row" id="main">
-    <span onClick="openNav()" class="openbtn show-on-med-and-down hide-on-large-only">☰</span>
+    <span onClick=" openNav()" class="openbtn show-on-med-and-down hide-on-large-only">☰</span>
 
     <div class="col s12 section">
       <div class="row valign-wrapper">
         <div class="col s2">
-          <img src="profile/profile-images/jan-zeman.jpg" alt="" class="circle responsive-img z-depth-1" />
+          <img src="profile/profile-images/maja-sediva.jpg" alt="" class="circle responsive-img z-depth-1" />
         </div>
         <div class="col s10">
           <span class="black-text">
-            <!--Aspon že není furík-->
-            <h1>Jan <i>"Címan"</i> Zeman</h1>
+            <h1>Maja Šedivá</h1>
             <p>
-              Je mi 15, dělám freerun a break dance, jsem alone piece of weebish shit, sooo mi muzes napsat :33
+              Mám ráda svůj osobní prostor
             </p>
           </span>
         </div>
@@ -103,57 +101,58 @@
         <div class="chips section">
 
           <div class="chip hoverable blue lighten-2 z-depth-1">
-            <i class="fas fa-shoe-prints"></i> Freerun
+            <i class="fas fa-swimmer"></i> Veslování
           </div>
 
           <div class="chip hoverable red lighten-2 z-depth-1">
-            <i class="fas fa-shoe-prints"></i> Tricking
+            <i class="fas fa-pencil-ruler"></i>Kreslení
           </div>
-
-          <div class="chip hoverable green lighten-2 z-depth-1">
-            <i class="fas fa-shoe-prints"></i> Break Dance
-          </div>
-
-          <div class="chip hoverable blue lighten-2 z-depth-1">
-            <i class="fas fa-gamepad"></i> Hraní her
-          </div>
-
-          <!--Anime je špatný-->
-
-          <div class="chip hoverable red lighten-2 z-depth-1">
-            <i class="fas fa-film"></i> Anime
-          </div>
-
 
         </div>
 
         <div class="social section">
           <h4>Sociální sítě</h4>
-          <p>I am alone, napište my pls</p>
-          <div class="chips section">
-            <div class="chip hoverable indigo lighten-2 z-depth-1">
-              <i class="fab fa-discord"></i>
-              Címan #7553
+          <div class="chips section pointer">
+
+            <div class="chip hoverable blue darken-3 z-depth-1 white-text">
+              <i class="fab fa-facebook"></i>
+              <a href="https://www.facebook.com/maja.sediva.7" class="white-text">Facebook</a>
             </div>
 
-            <div class="chip hoverable pink lighten-2 z-depth-1">
+            <div class="chip hoverable pink lighten-3 z-depth-1">
               <i class="fab fa-instagram"></i>
-              <a href="https://instagram.com/swaggy_kocicak">swaggy_kocicak</a>
+              <a href="https://instagram.com/sediva_maja">maja_sediva</a>
             </div>
+
+            <div class="chip hoverable yellow lighten-3 z-depth-1">
+              <i class="fab fa-snapchat"></i>
+              <a href=""> majolenkaaa</a>
+            </div>
+
           </div>
         </div>
+      </div>
+
+
+
+      <div class="hobbies-info col s12 l6 section">
 
         <div class="fav-sub section">
           <h4>Oblíbené předměty</h4>
 
+          <div class="chip hoverable brown lighten-1 z-depth-1">
+            <i class="fas fa-language"></i>
+            Jazyky
+          </div>
+
+          <div class="chip hoverable blue lighten-2 z-depth-1">
+            <i class="fas fa-atom"></i>
+            Fyzika
+          </div>
+
           <div class="chip hoverable blue lighten-2 z-depth-1">
             <i class="fas fa-running"></i>
             Tělocvik
-          </div>
-
-          <div class="chip hoverable orange lighten-2 z-depth-1">
-            <i class="fas fa-user-tie"></i>
-            Občanská výchova
           </div>
 
         </div>
@@ -161,80 +160,44 @@
         <div class="divider grey"></div>
 
         <div class="lea-fav-sub section">
-          <h4>Neoblíbené předměty</h4>
 
-          <div class="chip hoverable blue lighten-2 z-depth-1">
-            <i class="fas fa-calculator"></i>
-            Matematika
-          </div>
+          <h4>Neoblíbené předměty</h4>
 
           <div class="chip hoverable green lighten-2 z-depth-1">
             <i class="fas fa-tree"></i>
             Biologie
           </div>
 
-          <div class="chip hoverable blue lighten-2 z-depth-1">
-            <i class="fas fa-atom"></i>Fyzika
-          </div>
-
-          <div class="chip hoverable orange lighten-2 z-depth-1">
-            <i class="fas fa-language"></i>Čeština
-          </div>
-
-          <div class="chip hoverable orange lighten-2 z-depth-1">
-            <i class="fas fa-superscript"></i>Chemie
+          <div class="chip hoverable green lighten-2 z-depth-1">
+            <i class="fas fa-atom"></i>Chemie
           </div>
 
         </div>
 
       </div>
 
-      <div class="hobbies-info col s12 l6 section">
-        <div class="section">
-          <h4>FreeRun</h4>
-          <p>
-            Nejraději z freerunu dělám salta, přeskoky, rotace. <br>
-            Pokud chceš rád ti pomůžu se naučit se freerun, takže jestli chceš hit me up on Dis or Insta
-          </p>
-        </div>
-
-        <div class="section">
-          <h4>Gaming</h4>
-          <p>
-            Rád hraju hry na PC a Switchi <br>
-            Moje nejoblíbenější hry jsou:
-          <ul>
-            <li>Zelda: Breath of the Wild</li>
-            <li>MajnKampf</li>
-            <li>Watch Dogs</li>
-            <li>Assassin's creed IV: BlackFlag</li>
-            <li>CS:GO</li>
-            <li>TrackMania</li>
-          </ul>
-          </p>
-        </div>
-
-        <div class="section">
-          <h4>Anime</h4>
-          <p>
-            Ve svém volném čase taky rád koukám na Anime
-            Moje nejoblíbenější jsou:
-          <ul>
-            <li>Naruto</li>
-            <li>Akame ga Kill</li>
-            <li>Darling in the Franxx</li>
-            <li>Eromanga-sensei</li>
-            <li>Initial-D</li>
-            <li>One Punch Man</li>
-          </ul>
-          </p>
-        </div>
-
-
-      </div>
     </div>
+
+  </div>
+  </div>
   </div>
 
+
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
   <!-- Site footer -->
   <footer class="page-footer grey darken-3">
     <div class="container">
