--- a/people/jan-zeman.html
+++ b/people/jan-zeman.html
@@ -129,7 +129,7 @@
 
         <div class="social section">
           <h4>Sociální sítě</h4>
-          <p>I am alone, napište my pls</p>
+          <p>I am alone 24/7, napiš mi :3</p>
           <div class="chips section">
             <div class="chip hoverable indigo lighten-2 z-depth-1">
               <i class="fab fa-discord"></i>
@@ -194,7 +194,7 @@
           <h4>FreeRun</h4>
           <p>
             Nejraději z freerunu dělám salta, přeskoky, rotace. <br>
-            Pokud chceš rád ti pomůžu se naučit se freerun, takže jestli chceš hit me up on Dis or Insta
+            Pokud chceš rád ti pomůžu naučit se freerun, takže jestli chceš, napiš mi na Discord nebo instagram
           </p>
         </div>
 
@@ -205,7 +205,7 @@
             Moje nejoblíbenější hry jsou:
           <ul>
             <li>Zelda: Breath of the Wild</li>
-            <li>MajnKampf</li>
+            <li>Minecraft</li>
             <li>Watch Dogs</li>
             <li>Assassin's creed IV: BlackFlag</li>
             <li>CS:GO</li>
