--- a/people/jan-zeman.html
+++ b/people/jan-zeman.html
@@ -89,7 +89,7 @@
             <!--Aspon že není furík-->
             <h1>Jan <i>"Címan"</i> Zeman</h1>
             <p>
-              Je mi 15, dělám freerun a break dance, jsem alone piece of weebish shit, sooo mi muzes napsat :33
+              Je mi 15, dělám freerun a break dance, jsem alone piece of weebish shit, so mi muzes napsat :33
             </p>
           </span>
         </div>
