--- a/people/tomas-kebrle.html
+++ b/people/tomas-kebrle.html
@@ -147,6 +147,27 @@
           </div>
         </div>
 
+        <div class="fav-personal">
+          <h4>Oblíbené filmy/seriály</h4>
+          <div class="chips section">
+
+            <div class="chip hoverable blue lighten-2 z-depth-1">
+              <i class="fas fa-tv"></i>
+              <a href="https://www.netflix.com/title/80014749">Rick and Morty</a>
+            </div>
+
+            <div class="chip hoverable green lighten-2 z-depth-1">
+              <i class="fas fa-tv"></i>
+              <a href="https://www.imdb.com/list/ls023179087/">Všechny seriály v Arrowverse</a>
+            </div>
+
+            <div class="chip hoverable blue darken-1 z-depth-1">
+              <i class="fas fa-film"></i>
+              <a href="https://www.imdb.com/title/tt0816692/?ref_=nv_sr_srsg_0">Interstellar</a>
+            </div>
+
+          </div>
+        </div>
 
       </div>
 
