--- a/people/jan-zeman.html
+++ b/people/jan-zeman.html
@@ -58,7 +58,7 @@
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="index">Úvod</a>
     <a href="kalkulacky">Vzorce a kalkulačky</a>
-    <a href="onasitride">O naší třídě</a>
+    <a href="onasitride">O naší třýdě</a>
   </div>
   <!--PRO PC-->
   <div class="desktop_nav hide-on-med-and-down">
